# trajectory_prediction

./: .env  .gitignore  README.md  benchmark.md  main.py  pyproject.toml  requirements.txt  todos.md  train.py
callbacks/: viz.py
configs/: config.yaml  config_simpl.yaml  config_simpl_h100.yaml  config_vectornet.yaml  debug_simpl.yaml
configs/callbacks/: default.yaml
configs/datamodule/: argoverse2.yaml  av2_base.yaml  av2_simpl.yaml  av2_vectornet.yaml
configs/experiment/: vectornet_base.yaml  vectornet_large.yaml
configs/logger/: wandb.yaml
configs/model/: simpl.yaml  vectornet.yaml
configs/optimizer/: adamw.yaml
configs/trainer/: default.yaml
datamodule/: __init__.py  av2_datamodule.py  av2_qcnet.py  av2_simpl.py  av2_smart.py  av2_vectornet.py
datamodule/datasets/: av2_dataset.py
datamodule/datasets/av2/: av2_base_dataset.py  av2_constants.py  (+2 more)
datasets/: __init__.py  motion_dataset.py  standardization.py
datasets/av2/: __init__.py  av2_qcnet_dataset.py  av2_simpl_dataset.py  av2_smart_dataset.py  av2_vectornet_dataset.py  qcnet_target_builder.py  smart_av2_preprocess.py  smart_target_builder.py  smart_token_processor.py
models/: __init__.py  metrics.py
models/simpl/: __init__.py  loss.py  simpl.py
models/vectornet/: __init__.py  vectornet.py
notebooks/: argoverse2_motion.ipynb  waymo_motion.ipynb
scripts/: data_analysis.py  preprocess_av2.py
scripts/attr_analysis/: __init__.py  agent_motion.py  base.py  context.py  interaction.py  map_context.py  map_elements.py  runner.py  scenario_metadata.py  utils.py  vehicle_density.py  vehicle_motion.py
test/: test_motion_dataset.py
utils/: init_weights.py  viz.py  viz_motion.py
