[project]
name = "trajectory-prediction"
version = "0.1.0"
description = "Trajectory prediction zoo"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
  "torch==2.4.1",
  "torchvision==0.19.1",
  "torchaudio==2.4.1",
  "av2==0.3.5",
  "hydra-core==1.3.2",
  "pytorch-lightning==2.4.0",
  "shapely==2.0.6",
  "torch-geometric==2.6.1",
  "wandb>=0.25.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
